fix name blurring

--- a/app/static/index.css
+++ b/app/static/index.css
@@ -56,3 +56,8 @@ footer {
 .votingButtons span {
     margin-right: 1rem;
 }
+
+.is-blurred {
+    color: transparent;
+    text-shadow: 0 0 20px rgba(255, 255, 255, 1.0);
+}
